fix: Album list hiding with visibility: hidden

--- a/src/app/maheta/albums/albums.component.scss
+++ b/src/app/maheta/albums/albums.component.scss
@@ -5,6 +5,13 @@
   display: block;
   height: 100%;
   font-size: 1rem;
+  position: relative;
+}
+
+.hidden {
+  position: absolute;
+  top: 0;
+  visibility: hidden;
 }
 
 .album-list {
